--- a/server/pom.xml
+++ b/server/pom.xml
@@ -63,13 +63,13 @@
             <artifactId>shared</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>edu.byu.cs240</groupId>
-            <artifactId>shared</artifactId>
-            <version>1.0.0</version>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>edu.byu.cs240</groupId>-->
+<!--            <artifactId>shared</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--            <type>test-jar</type>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
